# modelviewprojection

./: .dockerignore  .gitattributes  .gitignore  AUTHORS  CLAUDE.md  COPYING  Dockerfile  Dockerfile.in  Dockerfile.spyder  LICENSE  Makefile  Makefile.am  Makefile.in  ModelViewProjection.sln  ModelViewProjection.vcxproj  ModelViewProjection.vcxproj.filters  README  README.md  TODO  TODO.org  TODOfromCPP  agenda.org  autogen.sh  build.sh  configure.ac  format.sh  modelviewprojection1.py  modelviewprojection10.py  modelviewprojection11.py  modelviewprojection12.py  modelviewprojection13.py  modelviewprojection14.py  modelviewprojection15.py  modelviewprojection16.py  modelviewprojection17.py  modelviewprojection18.py  modelviewprojection19.py  modelviewprojection2.py  modelviewprojection20.py  modelviewprojection21.py  (+15 more)
.emacs.d/: helm.el  init.el  install-melpa-packages.el  preferences.el
.githooks/: pre-commit
assignments/: Chapter1.py  Chapter2.py  assignment1.py  assignment2-screenspace.py  assignment2.py  assignment3-strafe.py
book/: requirements-buildbook.txt  requirements.txt
book/docs/_static/tex_exp_to_png/: Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile.docker  configure.ac  meson.build
book/docs/_static/tex_exp_to_png/entrypoint/: buildDebug.sh  entrypoint.sh  format.sh  lint.sh  shell.sh
book/docs/_static/tex_exp_to_png/entrypoint/dotfiles/.emacs.d/: init.el  install-melpa-packages.el  preferences.el
book/docs/_static/tex_exp_to_png/src/: Makefile.am  main.rs  tex_exp_to_png.c
demo01/: demo.py  demo1.py
demo02/: demo.py  demo2.py
demo03/: demo.py
demo04/: demo.py
demo05/: demo.py
demo06/: demo.py
demo07/: demo.py
demo08/: demo.py  demo8.py
demo09/: demo.py
demo10/: demo.py
demo11/: demo.py
demo12/: demo.py
demo13/: demo.py  demo13.py
demo14/: demo.py
demo15/: demo.py
demo16/: demo.py  demo16.py
demo17/: demo.py  demo17.py
demo18/: demo.py  demo18.py
demo19/: demo.py  demo19.py  triangle.frag  (+2 more)
demo19.5/: demo.py
src/: Makefile.am  demo02.py  demo04.py  demo05.py  demo06.py  demo07.py  demo08.py  demo09.py  demo10.py  demo11.py  demo12.py  demo13.py  demo14.5.py  demo14.py  demo15.5.py  demo15.py  demo16.5.py  demo16.py  demo17.py  demo18.py  demo19.py  disproportionate2.gp  main.book.cpp  main.c  main.cpp  main.h  mathutils.py  mathutils1d.py  mathutils2d.py  mathutils3d.py  modelspace.gp  monitor.gp  monitor2.gp  ndcSpace.gp  ndcSpace1.gp  ndcSpace2.gp  plot3.gp  rotate.gp  rotate2.gp  screenspace.gp  (+1 more)
src/demo01/: demo.py
src/demo02/: demo.py
src/demo03/: demo.py
src/demo04/: demo.py
src/demo05/: demo.py
src/demo06/: demo.py
src/demo07/: demo.py
src/demo08/: demo.py
src/demo09/: demo.py
src/demo10/: demo.py
src/demo11/: demo.py
src/demo12/: demo.py
src/demo13/: demo.py
src/demo14/: demo.py
src/demo15/: demo.py
src/demo15.5/: demo.py
src/demo16/: demo.py
src/demo17/: demo.py
src/demo18/: demo.py
src/demo19/: demo.py
src/demo19.5/: demo.py
src/demo20/: colorutils.py  demo.py  triangle.frag  triangle.vert
src/demo21/: demo.py  ground.vert  triangle.frag  triangle.vert
src/demo22/: demo.py  triangle.frag  triangle.vert
src/demo23/: demo.py  triangle.frag  triangle.vert
src/demo24/: demo.py  triangle.frag  triangle.vert
src/demo25/: demo.py  triangle.vert
src/demo26/: demo.py  ground.vert  triangle.frag  triangle.vert
src/demo27/: demo.py  triangle.frag
src/modelviewprojection/: axes.py  clipping.py  colorutils.py  demo01.py  demo02.py  demo03.py  demo04.py  demo05.py  demo06.py  demo07.py  demo08.py  demo09.py  demo10.py  demo11.py  demo12.py  demo13.py  demo14.py  demo15.py  demo16.py  demo17.py  demo18.py  demo19.py  demo19a.py  demo19b.py  demo19c.py  demo19d.py  demo19e.py  glhelper.py  mathutils.py  mathutils1d.py  mathutils2d.py  mathutils3d.py  matrix_stack.py  nbplotutils.py  pyMatrixStack.py  shading.py  softwarerendering.py  wxapp.py  wxapp2.py  wxapp2.xrc
src/modelviewprojection/cayley/: cayleygraph.py  cayleyscene.py
src/modelviewprojection/demo20/: demo.py  demo20.py  triangle.frag  triangle.vert
src/modelviewprojection/demo21/: colorutils.py  demo.py  demo21.py  ground.frag  ground.vert  triangle.frag  triangle.vert
src/modelviewprojection/demo22/: block.frag  block.vert  demo22.py
src/modelviewprojection/demo22a/: demo22a.py  pyramid.frag  pyramid.vert
src/modelviewprojection/demo23/: demo23.py  litjet.frag
src/modelviewprojection/demo24/: demo24.py  sphereworld.frag  sphereworld.vert
src/modelviewprojection/demos/: demo01.py  demo02.py  demo03.py  demo04.py  demo05.py  demo06.py  demo07.py  demo08.py  demo09.py  demo10.py  demo11.py  demo12.py  demo13.py  demo14.py  demo15.py  demo16.py  demo17.py  demo18.py  demo19.py  demo19a.py  demo19b.py  demo19c.py  demo19d.py  demo19e.py
src/modelviewprojection/demos/demo20/: demo20.py
src/modelviewprojection/demos/demo21/: demo21.py
src/modelviewprojection/demos/demo22/: demo22.py
src/modelviewprojection/demos/demo22a/: demo22a.py
src/modelviewprojection/demos/demo23/: demo23.py  litjet.vert
src/modelviewprojection/demos/demo24/: demo24.py  sphereworld.frag  sphereworld.vert
src/modelviewprojection/framebuffer/: softwarerendering.py
src/modelviewprojection/mathdemos/: _labels.py  billboard.frag  billboard.vert  crossproduct.py
src/modelviewprojection/mvpvisualization/: _pipeline.py  cayley_gl.py  cayleygraph.py  cayleyscene.py  coordinatesystems.py  model.py  modelview.py  modelview2d.py  modelvieworthoprojection.py  modelviewperspectiveprojection.py  passthrough.frag  passthrough_geom.frag  per_vertex_color.vert  project_identity.glsl  project_perspective.glsl  pushmatrix.py
src/modelviewprojection/notebooksrc/: crossproduct.py  framebuffer.py  ndc.py  plot2d.py
src/modelviewprojection/plotsforbook/: generate_plots.py
src/modelviewprojection/plotsforbook/plotutils/: generategridlines.py  matplotgraphs.py  mpltransformations.py
src/modelviewprojection/util/: axes.py  cameracontrols.py  clipping.py  colorutils.py  nbplotutils.py  shading.py  windowing.py
(+925 files in other folders)
