[project]
name = "modelviewprojection"
version = "0.0.2"
authors = [{name="William Emerison Six", email="billsix@gmail.com"}]
description = "ModelViewProjection - Tutorial for learning 3D Programming"

dynamic = ['dependencies']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
       'F401', 'F811', 'E402', 'I001', 'TID252', "F841",
       "E302", "E231", "B006", "B007", "B008", "UP007",
       "UP035", "S311", "S602", "T201",
       "E", "F", "I"
       ]
ignore = []

[project.scripts]
generate_plots_for_book = "modelviewprojection.plotsforbook.generate_plots:main"
