[project]
name = "modelviewprojection"
version = "0.0.2"
authors = [{name="William Emerison Six", email="billsix@gmail.com"}]
description = "ModelViewProjection - Tutorial for learning 3D Programming"

dynamic = ['dependencies']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
testpaths = ["tests"]

[tool.ruff]
# 80 because the book is built as a PDF from this source -- wider lines either
# wrap badly or run off the page. This governs BOTH the formatter and E501, so
# entrypoint/format.sh no longer passes --line-length; this is the one source of
# truth. (The ports keep E501 ignored below: their upstream teaching comments run
# long and reflowing 1557 of them is churn without value.)
line-length = 80

[tool.ruff.lint]
select = [
       # E231/E302 were listed here until 2026-07-18 but are preview-only rules,
       # so they did nothing except emit "has no effect because preview is not
       # enabled" on every ruff run. `ruff format` already handles both (spacing
       # after a comma, blank lines around defs). Removed rather than enabling
       # preview, which would turn on a batch of unstable rules for two checks
       # the formatter covers.
       'F401', 'F811', 'E402', 'I001', 'TID252', "F841",
       "B006", "B007", "B008", "UP007",
       "UP035", "S311", "S602", "T201",
       "E", "F", "I",
       # pep8-naming. Enabled 2026-07-18 after the whole tree was brought into
       # compliance; the only exemptions are in per-file-ignores below, each
       # with its reason (book notation, math convention, wx framework names).
       "N",
       ]
ignore = []

[tool.ruff.lint.per-file-ignores]
# The ports are ruff-FORMATTED (see entrypoint/format.sh) but keep their
# upstream style where a rule would fight it: long teaching comments (E501),
# the pgzero `from pgzero_gl import *` idiom (F403/F405), game RNG (S311),
# upstream debug prints (T201), `== None` comparisons (E711/E712), unused
# loop vars (B007), and typing-module imports the ports still use (UP035).
# ... plus bare excepts guarding sound playback (E722), the sys.path-then-
# import dance (E402), upstream variable naming/lambdas/defaults (E741, E731,
# B008, F841, UP007).
# the src demos draw random scenery/spawns exactly like the game ports do
# (game RNG, not crypto -- same S311 rationale as ports/** below), and print
# on purpose (shader logs, teaching output -- same T201 rationale).
#
# Python naming wins over the book's mathematical shorthand (Bill, 2026-07-18).
# The demos previously aliased `translate as T` / `uniform_scale as S` /
# `rotate as R` to match the Cayley-graph edge labels, and used single-capital
# frustum/light locals (L,R,B,T,N,F / Lx,Ly,Lz,Lw). Those are now spelled out.
# The graph-to-code mapping is kept explicit in a comment at each demo's import
# block, so a student can still line the diagram up with the source.
"src/modelviewprojection/demos/**" = [
    "S311",
    "T201",
]
# wxPython framework boundary. `OnPaint`, `OnTimer`, `InitGL`, `OnDraw`, `OnInit`
# are overrides -- wx looks up those EXACT names, so renaming them to snake_case
# would silently unbind them and the app would stop drawing. An externally-defined
# name always wins over a naming convention; the linter is wrong here, not the
# code. Scoped to N802 (function names) only: the locals inside those methods DO
# follow house style, and were fixed in the 2026-07-18 pass (VBO -> vbo,
# attribList -> attrib_list, keeping wx's `attribList=` keyword at the call).
"src/modelviewprojection/wxapp.py" = ["N802"]
"src/modelviewprojection/wxapp2.py" = ["N802"]
# assignments are student-facing scripts whose printed output IS the point.
"assignments/**" = ["T201"]
# build-time script; its progress output is deliberate.
"src/modelviewprojection/plotsforbook/**" = ["T201"]
# jupytext notebooks: printed output IS the notebook content.
"src/modelviewprojection/notebooksrc/**" = ["T201"]
"ports/**" = ["E501", "S311", "T201", "E711", "E712", "B007",
              "UP035", "E722", "E402", "E741", "E731", "B008", "F841", "UP007"]

[project.scripts]
generate_plots_for_book = "modelviewprojection.plotsforbook.generate_plots:main"
